@@ -1,5 +1,9 @@
 2017-08-15  Bastian Maerkisch  <bmaerkisch@web.de>
 
+	* src/msvc/Makefile:  Eliminate the separate wrapper script for builds of
+	console mode gnuplot by passing the file appropriate extensions as
+	arguments to the script.
+
 	* src/win/wgraph.c src/win/wgdiplus.cpp:  We intend to scale line widths
 	with resolution when printing, but we got that wrong due to confusion of
 	constants.
